# myHVACRHub

./: .gitignore  README.md  TIPS.md  alembic.ini  database.xlsx  main.py  merge.py  pyproject.toml  railway.json  requirements.txt  test.db
.cursor/rules/: 00-processus.mdc  001-backend.mdc
.github/workflows/: python-app.yml
.md/: commits_history.md  fast_quote_meta-prompt.md  fast_quote_moderator_meta-prompt.md  fast_quote_process_calcul_chiffrage.md  prompt.md
scripts/: deploy.sh  lint.sh  migration.sh  setup.sh  test.sh
src/app/repositories/: fast_quote_interface.py  user_interface.py
src/app/schemas/: get_ha_props_schema.py  user_schema.py
src/app/usecases/book/: create_book.py  get_all_books.py
src/app/usecases/fast_quote/: add_cooling_load_fast_coefficient.py  calc_cold_room_cooling_load_fast.py  get_all_cooling_load_fast_coefficient.py  get_cold_room_cooling_load_fast.py  update_cooling_load_fast_coefficient.py
src/app/usecases/humid_air/: get_full_ha_props.py  get_ha_props.py
src/app/usecases/user/: authenticate_user.py  create_user.py  delete_user.py  get_all_users.py  login_user.py  register_user.py  sign_up_user.py
src/common/infra/data/: sql_database.py  sql_unit_of_work.py
src/common/infra/web/: app.py  container.py  settings.py
src/common/tests/: test_database.py
src/common/tests/repositories/: base_repo_test.py  test_base_repo.py
src/common/tests/routes/: base_api_test.py  test_base_api.py
src/domain/entities/book/: book_entity.py
src/domain/entities/fast_quote/: cold_room_entity.py  cooling_load_fast_coef_entity.py
src/domain/entities/humid_air/: ha_entity.py  hair_entity.py  humid_air_entity.py
src/domain/entities/user/: user_entity.py
src/domain/exceptions/: fast_quote_exceptions.py  humid_air_exceptions.py  user_exceptions.py
src/domain/services/: password_hasher_interface.py  token_service_interface.py
src/domain/settings/: book_settings.py  cold_room_settings.py  ha_settings.py  humid_air_settings.py  user_settings.py
src/domain/value_objects/: dimension_valueobject.py
src/humid_air/app/usecases/: get_ha_props.py
src/humid_air/domain/entities/: humid_air_entity.py
src/humid_air/tests/entities/: test_humid_air.py
src/humid_air/tests/routes/: test_get_ha_props.py
src/humid_air/tests/usecases/: test_get_ha_props.py
src/infra/data/: database.py  sql_database.py  sql_unit_of_work.py
src/infra/data/migrations/: env.py
src/infra/data/models/: book_sqlmodel.py  cooling_load_fast_coef_sqlmodel.py  user_sqlmodel.py
src/infra/data/repositories/: book_sqlrepo.py  database.xlsx  fast_quote_inmemoryrepo.py  fast_quote_sqlrepo.py  user_sqlrepo.py
src/infra/services/: bcrypt_password_hasher.py  jwt_token_service.py
src/infra/web/: app.py  container.py  settings.py
src/infra/web/decorators/: role_required.py  role_required_decorator.py
src/infra/web/dtos/: book_dtos.py  common.py  fast_quote_dtos.py  generic.py  ha_dtos.py  humid_air_dtos.py  user_dtos.py
src/projects/app/repositories/: project_interface.py
src/projects/app/schemas/: project_schema.py
src/projects/app/usecases/: add_project_member.py  create_project.py  delete_project.py  delete_project_member.py  get_all_projects.py  get_project_by_id.py  get_project_members.py  get_user_projects.py  remove_project_member.py  update_project.py
src/projects/domain/entities/: project_entity.py
src/projects/domain/exceptions/: project_exceptions.py
src/projects/domain/settings/: project_settings.py
src/projects/tests/repositories/: test_add_project_member_repo.py  test_create_project_repo.py  test_delete_project_by_id_repo.py  test_get_all_projects_with_limit_repo.py  test_get_project_by_id_repo.py  test_get_project_members.py  test_get_user_projects_repo.py  test_remove_project_member_repo.py  test_update_project_repo.py
src/projects/tests/routes/: test_create_project_route.py
src/projects/tests/usecases/: test_add_project_member.py  test_create_project.py  test_delete_project.py  test_get_all_projects.py  test_get_project_by_id.py  test_get_project_members.py  test_get_user_projects.py  test_remove_project_member.py  test_update_project.py
src/tests/: test_database.py
src/tests/decorators/: test_role_required.py
src/tests/dtos/: test_user_dtos.py
src/tests/entities/book/: test_book.py
src/tests/entities/humid_air/: test_ha.py
src/tests/repositories/: base_repo_test.py  test_book_repo.py  test_user_repo.py
src/tests/repositories/book/: test_book_repo.py
src/tests/repositories/user/: test_user_repo.py
src/tests/routes/: base_api_test.py  test_get_all_books_route.py
src/tests/routes/book/: test_create_book_route.py  test_get_all_books_route.py
src/tests/routes/fast_quote/: test_bilan_frigo_ratio.py
src/tests/routes/humid_air/: test_get_ha_props.py
src/tests/routes/user/: test_delete_user_by_id_route.py  test_get_all_users_route.py  test_login_user_route.py  test_register_user_route.py  test_sign_up_user_route.py
src/tests/services/: test_jwt_token_service.py
src/tests/usecases/book/: test_create_book.py  test_get_all_books.py
src/tests/usecases/humid_air/: test_get_full_ha_props.py  test_get_ha_props.py
src/tests/usecases/user/: test_authenticate_user.py  test_create_user.py  test_delete_user.py  test_get_all_users.py  test_login_user.py  test_register_user.py  test_sign_up_user.py
src/tests/value_objects/: test_dimension.py
src/users/app/repositories/: user_interface.py
src/users/app/schemas/: user_schema.py
src/users/app/usecases/: delete_user.py  get_all_users.py  get_user_profile.py  login_user.py  sign_up_user.py
src/users/domain/entities/: __init__.py  user_entity.py
src/users/domain/exceptions/: user_exceptions.py
src/users/domain/services/: password_hasher_interface.py  token_service_interface.py
src/users/domain/settings/: user_settings.py
src/users/infra/services/: bcrypt_password_hasher.py  (+1 more)
src/utils/: class_object.py
(+57 files in other folders)
